--- a/src/css/Skills.css
+++ b/src/css/Skills.css
@@ -1,9 +1,11 @@
 @import url('https://fonts.googleapis.com/css2?family=Prompt:wght@600&display=swap');
 
 .last {
+    /* border: 1px solid red; */
     flex-direction: column;
     height: 100vh;
     width: 100vw;
+    justify-content: center;
     background-color: #292929;
     display: flex;
     align-items: center;
@@ -194,7 +196,7 @@
     }
 
     .pagination1 {
-        margin: 10%;
+        margin: 5%;
         flex-direction: row;
         display: initial;
     }
